--- a/package.json
+++ b/package.json
@@ -5,28 +5,44 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 80",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "@mui/x-data-grid": "^7.27.3",
+    "@mui/x-data-grid-premium": "^7.27.3",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
+    "react-paginate": "^8.3.0",
     "react-scroll": "^1.9.3",
     "react-select": "^5.10.1",
+    "react-table": "^7.8.0",
+    "react-virtuoso": "^4.12.5",
+    "react-window": "^1.8.11",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^22.13.10",
+    "@types/prop-types": "^15.7.14",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4"
